Add Prisma setup and Vercel configuration;

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.5.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
