--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "dev": "nodemon --watch src --exec ts-node src/index.ts",
+  "build": "tsc && prisma generate",
+  "start": "node dist/index.js", 
+  "render-build": "npm run build && npm run prisma:migrate",
+  "prisma:migrate": "prisma migrate deploy",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
