--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
+"scripts": {
   "dev": "nodemon --watch src --exec ts-node src/index.ts",
   "build": "tsc && prisma generate",
-  "start": "node dist/index.js", 
-  "render-build": "npm run build && npm run prisma:migrate",
-  "prisma:migrate": "prisma migrate deploy",
+  "start": "node dist/index.js",
+  "vercel-build": "npm run build",
   "test": "echo \"Error: no test specified\" && exit 1"
+},"prisma": {
+  "schema": "prisma/schema.prisma"
 },
   "keywords": [],
   "author": "",
