--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/index.js",
+      "src": "src/index.ts",
       "use": "@vercel/node"
     }
   ],
+  "build": {
+  "env": {
+    "PRISMA_GENERATE_IN_POSTBUILD": "true"
+  }
+},
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/index.js"
+      "dest": "src/index.ts"
     }
   ]
 }
