--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "build": "tsc",
+    "build": "npx prisma db push && tsc", 
     "start": "node dist/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "keywords": [],
   "author": "",
